<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.ualberta.ca.djphan_301a1.MainActivity" >

    <TextView
        android:id="@+id/statsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title" />

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_maintextfield"
        android:layout_alignLeft="@+id/statsTitle"
        android:layout_below="@+id/statsTitle"
        android:clickable="false" >
    </ListView>

    <Button
        android:id="@+id/mainarchivebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/add_button"
        android:onClick="addToArchive"
        android:text="@string/action_archive" />

    <Button
        android:id="@+id/add_button"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mainarchivebutton"
        android:layout_alignBottom="@+id/mainarchivebutton"
        android:layout_alignRight="@+id/mainListView"
        android:background="@drawable/d_action_new"
        android:onClick="addToDoListMain" />

    <EditText
        android:id="@+id/add_maintextfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_button"
        android:layout_alignLeft="@+id/mainListView"
        android:layout_alignRight="@+id/mainListView"
        android:ems="10"
        android:hint="@string/add_hint" />

</RelativeLayout>