<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/archiveListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/archive_addbutton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/archiveTitle" >

    </ListView>

    <TextView
        android:id="@+id/archiveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/archivetitle" />

    <Button
        android:id="@+id/archive_delbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/archive_addbutton"
        android:layout_alignParentBottom="true"
        android:background="@drawable/d_action_discard" />

    <Button
        android:id="@+id/archive_addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/archive_delbutton"
        android:layout_alignParentRight="true"
        android:background="@drawable/d_action_new" />

    <EditText
        android:id="@+id/archiveTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/archive_addbutton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/archiveListView"
        android:layout_toLeftOf="@+id/archive_addbutton"
        android:ems="10"
        android:hint="@string/add_hint" />

    <Button
        android:id="@+id/unarchive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/archiveTextField"
        android:text="@string/action_unarchive" />

</RelativeLayout>
